<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">粤嵌测试系统</string>
    <string name="action_settings">设置</string>
    <string name="led">灯光控制</string>
    <string name="air_condition">空调控制</string>
    <string name="curtain">窗帘控制</string>
    <string name="captureimages">照相</string>
    <string name="gas">烟雾监测</string>
    <string name="gprs">电话</string>
    <string name="humidity">温湿度监测</string>
    <string name="barchar_desc">数据来源于Samsung_Exynos_5260开发板</string>
    <string name="label_temperature">温度</string>
    <string name="label_humidity">湿度</string>
    <string name="temperature_unit">℃</string>
    <string name="humidity_unit">hPa</string>
    <string name="mediaplay">视频播放</string>
    <string name="mediaplaysound">音乐播放</string>
    <string name="pwm">蜂鸣器控制</string>
    <string name="recordvideo">录像</string>
    <string name="phone">电话</string>
    <string name="rfid">读卡</string>
    <string name="motor">直流电机</string>
    <string name="stepmotor">步进电机</string>
    <string name="photo_name">照片名称</string>
    <string name="action">拍照</string>
    <string name="del">取消</string>
    <string name="save">保存</string>
    <string name="gas_title">烟雾传感器</string>
    <string name="gas_normal">烟雾正常</string>
    <string name="gas_error">烟雾超标</string>
    <string name="openComError">打开串口失败:没有串口读/写权限!</string>
    <string name="openComError1">打开串口失败:未知错误!</string>
    <string name="openComError2">打开串口失败:参数错误!</string>
    <string name="title">温湿度实验</string>
    <string name="humidityDisplay">湿度显示：</string>
    <string name="temperatureDisplay">温度显示：</string>
    <string name="sunlightDisplay">光感显示：</string>
    <string name="buttonTitle01">开始获取数据</string>
    <string name="buttonTitle02">停止获取数据</string>
    <string name="led01">LED1</string>
    <string name="led02">LED2</string>
    <string name="led03">LED3</string>
    <string name="led04">LED4</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="pause">暂停</string>
    <string name="continues">继续</string>
    <string name="left">左转</string>
    <string name="right">右转</string>
    <string name="title_led">LED应用</string>
    <string name="title_motor">电机应用</string>
    <string name="stepmotortitle">步进电机应用</string>
    <string name="title_pwm">PWM应用</string>
    <string name="title_th_sensor">温湿度传感器应用</string>
    <string name="title_gas_sensor">烟雾传感器应用</string>
    <string name="title_gprs">GPRS应用</string>
    <string name="title_rfid">RFID应用</string>
    <string name="stepmotorforwardBtn">顺时针启动</string>
    <string name="stepmotorbackwardBtn">逆时针启动</string>
    <string name="pwminput">请输入蜂鸣器频率</string>
    <string name="button_start">开始</string>
    <string name="button_stop">停止</string>
    <string name="record">录制视频短片</string>
    <string name="sdnoalive">SD卡不存在，请插入SD卡</string>
    <string name="dia_tel">拔打电话</string>
    <string name="revice">接叫</string>
    <string name="refuse">拒绝</string>
    <string name="dia_msg">来电!!</string>
    <string name="mobile">请输入手机号</string>
    <string name="call_msg">正在拔号\u2026</string>
    <string name="finish_call_msg">结束通话</string>
    <string name="card_title">卡号：</string>
    <string name="rfidbuttonTitle01">开始检查卡号</string>
    <string name="rfidbuttonTitle02">停止检查卡号</string>
    <string name="rfidbuttonTitle03">退出</string>
    <string name="copyright">Copyright© 2005&#8211;2016 GEC.All Rights Reserved.</string>
    <string name="exit_confirm">再按一次退出粤嵌测试系统</string>
    <string name="control_appliances">家电控制</string>
    <string name="monitor_data">数据监测</string>
    <string name="communication">通信</string>
    <string name="mutli_media">多媒体</string>
    <string name="other">其他</string>
    <string name="welcome">~欢迎来到粤嵌测试系统~\n(温馨提示：屏幕往右滑有惊喜哟)</string>
    <string name="no_sdcard">没有可用的存储卡</string>
    <string name="no_camera">未找到系统相机程序</string>
    <string name="okBtn">确定</string>
    <string name="cancelBtn">取消</string>
    <string name="no_photo">没有找到图片</string>
    <string name="start_record_video">开始录像中&#8230;</string>
    <string name="save_record_video">保存录像中\u2026</string>

</resources>