<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:layout_marginTop="70dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/title_led"
            android:textSize="40sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_led1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:layout_marginRight="50dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_led_normal"
                android:gravity="center_horizontal"
                android:text="@string/led01"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/cb_led4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginStart="50dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_led_normal"
                android:gravity="center_horizontal"
                android:text="@string/led04"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/cb_led2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_led_normal"
                android:gravity="center_horizontal"
                android:text="@string/led02"
                android:textSize="25sp" />

            <CheckBox
                android:id="@+id/cb_led3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:button="@null"
                android:drawableTop="@drawable/btn_led_normal"
                android:gravity="center_horizontal"
                android:text="@string/led03"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>