<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title_rfid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:text="@string/title_rfid"
        android:textSize="40sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/eet_card_num"
                android:layout_toLeftOf="@id/eet_card_num"
                android:layout_toStartOf="@id/eet_card_num"
                android:text="@string/card_title"
                android:textSize="25sp" />

            <com.gec.smarthome.widget.SnEditText
                android:id="@+id/eet_card_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/shape_frequence_content"
                android:ems="15"
                android:enabled="false"
                android:inputType="number"
                android:textColor="@android:color/black" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_start_check"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/selector_black_btn_start"
                android:gravity="center_horizontal"
                android:text="@string/rfidbuttonTitle01"
                android:textSize="25sp" />

            <Button
                android:id="@+id/btn_stop_check"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:button="@null"
                android:drawableTop="@drawable/selector_black_btn_stop"
                android:gravity="center_horizontal"
                android:text="@string/rfidbuttonTitle02"
                android:textSize="25sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>